fix: set line-height in normalized h1 to avoid overlapping (#58)

--- a/src/sass/_defaults.scss
+++ b/src/sass/_defaults.scss
@@ -31,9 +31,6 @@ $color-link-footer: rgba(255, 163, 30, 1) !default;
 
 $color-code: rgba($gray-200, 0.5) !default;
 
-$header-font-size: 2em;
-$header-font-size-small: 1.5em;
-
 $body-background: white !default;
 $body-font-color: $gray-800 !default;
 $body-font-weight: normal !default;
